--- a/src/pages/Profile/Profile.scss
+++ b/src/pages/Profile/Profile.scss
@@ -26,7 +26,7 @@
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
   width: calc(100% - 16px);
   max-width: 368px;
-  max-height: calc(100vh - 56px);
+  max-height: calc(100% - 56px);
   overflow: auto;
   left: 50%;
   transform: translateX(-50%);
@@ -163,4 +163,8 @@
     background-color: $primary;
     color: $white;
   }
+}
+
+.profile__section {
+  flex: none;
 }
